INT-18642 theme_snap: Set the weight to bold for all links in the footer, to comply with VPAT issue "Color and contrast - Links #277"

--- a/scss/_core.scss
+++ b/scss/_core.scss
@@ -3519,6 +3519,9 @@ body:not(.pagelayout-course) #moodle-footer {
     clear: both;
     color: $gray-lighter;
     background-color: $body-color;
+    a {
+        font-weight: bold;
+    }
 }
 
 #snap-footer-content,
